force-app/main/default/objects/OCE__ToDoAccountPlanStakeholder__c/OCE__ToDoAccountPlanStakeholder__c.object-meta.xml
<CustomObject>
    <description>Junction object between ToDo and AccountPlanStakeholder objects</description>
    <label>ToDo Account Plan Stakeholder</label>
    <nameField>
        <displayFormat>TDAPS-{0000000000}</displayFormat>
        <label>ToDo Account Plan Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ToDo Account Plan Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>