force-app/main/default/objects/OCE__ToDoAccountPlanStakeholder__c/fields/OCE__Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>OCE__Stakeholder__c</fullName>
    <description>Parent Stakeholder</description>
    <label>Stakeholder</label>
    <referenceTo>OCE__AccountPlanStakeholder__c</referenceTo>
    <relationshipLabel>ToDo Account Plan Stakeholders</relationshipLabel>
    <relationshipName>ToDo_Account_Plan_Stakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>