force-app/main/default/objects/OCE__ToDoAccountPlanStakeholder__c/fields/OCE__ToDo__c.field-meta.xml
<CustomField>
    <fullName>OCE__ToDo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent ToDo</description>
    <label>ToDo</label>
    <referenceTo>OCE__ToDo__c</referenceTo>
    <relationshipLabel>ToDo Account Plan Stakeholders</relationshipLabel>
    <relationshipName>ToDo_Account_Plan_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>