force-app/main/default/objects/OCE__ToDoAccountPlanStakeholder__c/fields/OCE__UniqueIntegrationID1__c.field-meta.xml
<CustomField>
    <fullName>OCE__UniqueIntegrationID1__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique External ID which is used for data loading only.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique External ID which is used for data loading only.</inlineHelpText>
    <label>Unique Integration ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>